--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,10 +23,10 @@ checkout scmGit(branches: [[name: '*/main']], extensions: [], userRemoteConfigs:
         
         stage("sonar") {
             steps {
-               mvn clean verify sonar:sonar \
+              sh '''mvn clean verify sonar:sonar \
   -Dsonar.projectKey=eks-project-full-cicd \
   -Dsonar.host.url=http://43.205.198.59:9000 \
-  -Dsonar.login=sqp_0d6301c1635e55663c4b9d06f6b9d9b912940c60
+  -Dsonar.login=sqp_0d6301c1635e55663c4b9d06f6b9d9b912940c60'''
                 
                 }
                     
